--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -213,7 +213,13 @@
           }
         }
       };
-      window.onload = carrega_pagina
+
+      function carrega_site() {
+        {% include "edicao_puxar_local_ou_versao.js" %}
+        carrega_pagina();
+      };
+      window.onload = carrega_site
+
     </script>
 
   </div>
