--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -146,6 +146,7 @@
       border-left: solid black 1px;
       border-top: solid black 1px;
       padding-left: 4px;
+      padding-right: 4px;
       font-weight: normal;
     }
     
