--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -587,6 +587,8 @@
       $('#event-modal input[name="event-start-date"]').datepicker('update', evento ? evento.startDate : '');
       $('#event-modal input[name="event-end-date"]').datepicker('update', evento ? evento.endDate : '');
 
+      $('#event-modal input[name="arquivo"]').val(''); // Limpa o campo de arquivo
+      
       {% if user.tipo_de_usuario != 4 %}
         $("#save-event").prop("disabled",true);
       {% endif %}
