--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -8,6 +8,23 @@
 {% load static %}
 {% load get_field %}
 
+<style>
+  .carregando {
+    display: inline-block;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #7498CD;
+    border-radius: 100%;
+    width: 38px;
+    height: 38px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+  }
+</style>
+
 <form id="meuForm" class="form-horizontal" method="post" enctype="multipart/form-data">
 
   {% csrf_token %}
@@ -127,6 +144,7 @@
         </div> {% comment %} modal-body {% endcomment %}
 
         <div class="modal-footer">
+          <div id="carregando_arquivo" style="float: left; display: none;">Salvando evento... <div class="carregando"></div></div>
           <div id="warning-footer" style="color: red;"></div>
           <button type="button" class="btn btn-default mb-1" data-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary mb-1" id="save-event">Save</button>
