--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -21,9 +21,7 @@
   {% include "reload.html" %}
 
   <style>
-    th {
-      padding: 1px 4px 1px 4px;
-    }
+    th {padding: 1px 4px 1px 4px;}
   </style>
 
 {% endblock %}
