--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -11,6 +11,7 @@
   {% include "tabelas_includes.html" %}
   <style>
     td {padding: 8px;}
+    th {text-align: center;}
 
     .short-text { display: none; white-space: nowrap; }
     .full-text { display: inline-block; white-space: nowrap; }
@@ -25,8 +26,6 @@
     }
   </style>
 
-  <script src="{% static 'js/w3.js' %}"></script>
-
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
 
@@ -34,90 +33,105 @@
 
 {% block content %}
 
-  <span class="titulo">Matérias na Mídia</span>
+  <span class="titulo">Matérias na Mídia
+    {% if  user.tipo_de_usuario == 4 %}
+      <a class="open-documento"
+        data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
+        >&#10133;</a>
+    {% endif %}
+  </span>
 
   {% comment %} {% include "informacoes.html" %} {% endcomment %}
 
   <div class="atualizar">
   <div class="table-responsive">
 
-    <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
+    <table id="RelatoriosTable" data-order='[[ 0, "desc" ]]' class="table table-bordered table-hover table-sm" style="width: auto;">
       <thead class="table-info">
         <tr>
-          <th scope="col" class="text-center">Anotações</th>
-          <th scope="col" class="text-center">Data</th>
-          <th scope="col" class="text-center">Projeto</th>
-          <th scope="col" class="text-center">Documento</th>
-          <th scope="col" class="text-center">URLs</th>
+          <th scope="col">Data</th>
+          <th scope="col">Anotações</th>
+          <th scope="col">Projeto</th>
+          <th scope="col">Documento</th>
+          <th scope="col">URLs</th>
         </tr>
       </thead>
       <tbody>
-      {% for relatorio in relatorios %}
+      {% for relatorio in documentos %}
 
-        {% if relatorio.link %}
+        {% if relatorio.link or relatorio.documento %}
 
-          <tr class="item">
+          {% if user.tipo_de_usuario == 4 or not relatorio.confidencial %}
 
-            <td>
-              {% if relatorio.anotacao %}
-                {{relatorio.anotacao}}
-              {% endif %}
-            </td>
+            <tr class="item">
 
-            <td>
-              {% if relatorio.data %}
-                {{relatorio.data|date:"d/m/Y"}}
-              {% endif %}
-            </td>
+              <td data-order="{{relatorio.data|date:"Ymd"}}">
+                {% if relatorio.data %}{{relatorio.data|date:"d/m/Y"}}{% endif %}
+                {% if relatorio.confidencial %}CONFIDENCIAL{% endif %}
+              </td>
 
-            <td>
-              {% if relatorio.projeto %}
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  <a href="{% url 'projeto_completo' relatorio.projeto.id %}">
+              <td>
+                {% if relatorio.anotacao %}
+                  {{relatorio.anotacao}}
                 {% endif %}
-                {{relatorio.projeto.get_titulo}}
-                
-                {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
-                
-                {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-                  </a>
-                {% endif %}
-              {% endif %}
-            </td>
+              </td>
 
-            <td class="text-center">
+              <td>
+                {% if relatorio.projeto %}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    <a href="{% url 'projeto_completo' relatorio.projeto.id %}">
+                  {% endif %}
+                  {{relatorio.projeto.organizacao}}, {{relatorio.projeto.get_titulo}}
+                  {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    </a>
+                  {% endif %}
+                {% elif relatorio.organizacao %}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    <a href="{% url 'organizacao_completo' relatorio.organizacao.id %}">
+                  {% endif %}
+                  {{relatorio.organizacao}}
+                  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+                    </a>
+                  {% endif %}
+                {% endif %}
+              </td>
+
+              <td class="text-center">
+                  {% if relatorio.link%}
+                    <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;"
+                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                      <span class="full-text" style="width: 9em;">Link da Matéria</span>
+                      <span class="short-text" style="width: 3em;">Link</span>
+                    </a><br>
+                  {% endif %}
+                  {% if relatorio.documento%}
+                    <a class="btn btn-light btn-outline-info btn-sm" 
+                      href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
+                      <span class="full-text" style="width: 9em;">Cópia no Serv. PFE</span>
+                      <span class="short-text" style="width: 3em;">Cópia</span>
+                    </a>
+                  {% endif %}
+              </td>
+
+              <td>
                 {% if relatorio.link%}
-                  <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;"
-                     href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text" style="width: 9em;">Link da Matéria</span>
-                    <span class="short-text" style="width: 3em;">Link</span>
+                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                    <span>{{relatorio.link}}</span>
                   </a><br>
                 {% endif %}
-                {% if relatorio.documento%}
-                  <a class="btn btn-light btn-outline-info btn-sm" 
-                     href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text" style="width: 9em;">Cópia no Serv. PFE</span>
-                    <span class="short-text" style="width: 3em;">Cópia</span>
+                {% if relatorio.documento %}
+                  <a href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
+                    <span>{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}</span>
                   </a>
                 {% endif %}
-            </td>
+              </td>
 
-            <td>
-              {% if relatorio.link%}
-                <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                  <span>{{relatorio.link}}</span>
-                </a><br>
-              {% endif %}
-              {% if relatorio.documento %}
-                <a href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                  <span>{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}</span>
-                </a>
-              {% endif %}
-          </td>
-
-          </tr>
+            </tr>
 
           {% endif %}
+
+        {% endif %}
 
       {% endfor %}
       </tbody>
@@ -147,5 +161,8 @@
   </div>
 
   <br>
+  {% if  user.tipo_de_usuario == 4 %}
+    {% include "documento-modal.html" %}
+  {% endif %}
 
 {% endblock %}
