iniciando suporte para resumo e abstract de projeto

--- a/administracao/templates/administracao/relatorio_projetos.html
+++ b/administracao/templates/administracao/relatorio_projetos.html
@@ -34,7 +34,7 @@
             <h4>Título: {{projeto.titulo}}</h4><br>
           {% endif %}
 
-          <strong>Descrição:</strong> {{ projeto.proposta.descricao|linebreaks }}
+          <strong>Descrição da Proposta:</strong> {{ projeto.proposta.descricao|linebreaks }}
           <strong>Expectativas de resultados/entregas :</strong> {{ projeto.proposta.expectativas|linebreaks }}
           <strong>Recursos a serem disponibilizados aos Estudantes :</strong> {{ projeto.proposta.recursos|linebreaks }}<br>
           <strong>Outras observações :</strong> {{ projeto.proposta.observacoes|linebreaks }}<br>
