tirando dependencias de título e descrição

--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -27,13 +27,13 @@
   {% if banca.projeto %}
     <b>Título do Projeto:</b> 
     <a href="{% url 'projeto_completo' banca.projeto.id %}">
-      {% if banca.projeto.titulo_final %}
+      {% if banca.projeto.titulo_final and banca.projeto.titulo_final != banca.projeto.proposta.titulo %}
         {{banca.projeto.titulo_final}}</a><br>
-        <small>Título original: 
-          <a href="{% url 'projeto_completo' banca.projeto.id %}">{{banca.projeto.titulo}}</a>
+        <small>Título original da proposta: 
+          <a href="{% url 'projeto_completo' banca.projeto.id %}">{{banca.projeto.proposta.titulo}}</a>
         </small>
       {% else %}
-        {{banca.projeto.titulo}}</a>
+        {{banca.projeto.get_titulo}}</a>
       {% endif %}
       {% include "tipo_projeto.html" with projeto=banca.projeto %}
   {% endif %}
