--- a/administracao/templates/administracao/relatorio_projetos.html
+++ b/administracao/templates/administracao/relatorio_projetos.html
@@ -24,14 +24,14 @@
 
           <p style="page-break-before: always"></p>
 
-          {% if projeto.titulo_final %}
+          {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
             <style>
                 h4 {display: inline;}
             </style>
             <h4>Título: {{projeto.titulo_final}}</h4>
-            <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título original: {{projeto.titulo}}</small><br>
+            <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título original da proposta: {{projeto.proposta.titulo}}</small><br>
           {% else %}
-            <h4>Título: {{projeto.titulo}}</h4><br>
+            <h4>Título: {{projeto.get_titulo}}</h4><br>
           {% endif %}
 
           <strong>Descrição da Proposta:</strong> {{ projeto.proposta.descricao|linebreaks }}
