--- a/documentos/templates/documentos/contratos_assinados.html
+++ b/documentos/templates/documentos/contratos_assinados.html
@@ -58,13 +58,13 @@
               
               <td> <!-- Projeto -->
                 <a style="font-size: 0.9em;" class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
-                  {% if projeto.titulo_final %}
+                  {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
                     {{projeto.titulo_final}}
                     <span class="tit_ori">
-                      <br><small>Título original: {{projeto.titulo}}</small>
+                      <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
                     </span>
                   {% else %}
-                    {{projeto.titulo}}
+                    {{projeto.get_titulo}}
                   {% endif %}
                   {% include "tipo_projeto.html" %}
                 </a>
