--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -47,13 +47,13 @@
             <br>
             <b>Título do Projeto:</b> 
             <a href="{% url 'projeto_detalhes' banca.projeto.id %}">
-              {% if banca.projeto.titulo_final %}
+              {% if banca.projeto.titulo_final and banca.projeto.titulo_final != banca.projeto.proposta.titulo %}
                 {{banca.projeto.titulo_final}}</a><br>
-                <small>Título original: 
-                  <a href="{% url 'projeto_detalhes' banca.projeto.id %}">{{banca.projeto.titulo}}</a>
+                <small>Título original da proposta: 
+                  <a href="{% url 'projeto_detalhes' banca.projeto.id %}">{{banca.projeto.proposta.titulo}}</a>
                 </small>
               {% else %}
-                {{banca.projeto.titulo}}</a>
+                {{banca.projeto.get_titulo}}</a>
               {% endif %}
           {% endif %}
           
