--- a/professores/templates/professores/dinamicas_editar.html
+++ b/professores/templates/professores/dinamicas_editar.html
@@ -150,7 +150,7 @@
         {% for projeto in projetos %}
           <option value="{{projeto.id}}"
           style="font-size: 0.75em;"
-          data-titulo="{{projeto.titulo}}"
+          data-titulo="{{projeto.get_titulo}}"
           data-organizacao="{{projeto.organizacao}}"
           data-orientador="{{projeto.orientador}}"
           {% if projeto.id == encontro.projeto.id %} selected {% endif %}
@@ -158,7 +158,7 @@
           >
             {{projeto.ano}}.{{projeto.semestre}}
             ({{projeto.organizacao}})
-            {{projeto.titulo}}
+            {{projeto.get_titulo}}
           </option>  
         {% endfor %}
       </select><br><br>
