--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -39,12 +39,12 @@
     value="{% if projeto.titulo_final %}{{projeto.titulo_final}}{% else %}{{projeto.titulo_final}}{% endif %}">
     <br><br>
 
-    <label for="descricao">Descrição da Proposta de Projeto (REMOVER)</label><br>
+    {% comment %} <label for="descricao">Descrição da Proposta de Projeto (REMOVER)</label><br>
     <textarea id="descricao" name="descricao" rows="10" cols="88" maxlength="{% max_length projeto 'descricao' %}"
     >{% if projeto.descricao %}{{projeto.descricao}}{% endif %}</textarea>
-    <br><br>
+    <br><br> {% endcomment %}
 
-    <label for="resumo">Resumo de Projeto</label><br>
+    <label for="resumo">Resumo do Projeto</label><br>
     <textarea id="resumo" name="resumo" rows="10" cols="88" maxlength="{% max_length projeto 'resumo' %}"
     >{% if projeto.resumo %}{{projeto.resumo}}{% endif %}</textarea>
     <br><br>
