--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -13,8 +13,6 @@
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
-
-  {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
 
   {% comment %} Para gerar as imagens {% endcomment %}
@@ -182,7 +180,7 @@
                     options: {
                         title: {
                             display: true,
-                            text: '{% if lingua == "pt" %}Avaliação de Planejamento Preliminar{% else %}Preliminary Planning Assessment{% endif %}',
+                            text: '{% if lingua == "pt" %}Avaliação Preliminar{% else %}Preliminary Assessment{% endif %}',
                             position: 'top'
                         },
                         tooltips: tooltips,
@@ -303,7 +301,7 @@
                     options: {
                         title: {
                             display: true,
-                            text: '{% if lingua == "pt" %}Relatório de Planejamento{% else %}Planning Report{% endif %}',
+                            text: '{% if lingua == "pt" %}Relatório Preliminar{% else %}Preliminary Report{% endif %}',
                             position: 'top'
                         },
                         tooltips: tooltips,
