trocando normal por regular

--- a/organizacoes/templates/organizacoes/carrega_proposta.html
+++ b/organizacoes/templates/organizacoes/carrega_proposta.html
@@ -50,7 +50,7 @@
 
     <br><br>
 
-    <input type="submit" class="btn btn-secondary" value="Enviar Proposta de Projeto">
+    <input type="submit" class="btn btn-primary mb-1" value="Enviar Proposta de Projeto">
     
     {% if not liberadas_propostas %}
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
