--- a/templates/tipo_proposta.html
+++ b/templates/tipo_proposta.html
@@ -27,5 +27,5 @@
   {% endif %}
 
 {% else %}
-  {% if descr_short %}NO{% else %}[Normal]{% endif %}
+  {% if descr_short %}RE{% else %}[Regular]{% endif %}
 {% endif %}
